@@ -1,72 +1,79 @@
 package deu.cse.spring_webmail.service;
 
 import deu.cse.spring_webmail.model.AddressEntry;
+import deu.cse.spring_webmail.repository.AddressBookRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import java.util.Comparator;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  *
- * @author jaejin
+ * @author jiye
  */
 @Service
+@RequiredArgsConstructor
 public class AddressBookService {
 
-    private final List<AddressEntry> addressBook = new ArrayList<>();
+    private final AddressBookRepository repository;
 
     public List<AddressEntry> getAll() {
-        return addressBook;
+        return repository.findAll();
     }
 
     public void add(AddressEntry entry) {
-        addressBook.add(entry);
+        repository.save(entry);
     }
 
-    public void deleteById(int id) {
-        addressBook.removeIf(entry -> entry.getId() == id);
+    public void deleteByEmail(String email) {
+        repository.deleteById(email);
     }
 
     public List<AddressEntry> search(String query) {
-        String q = query.toLowerCase().replaceAll("-", "");  // 사용자 검색어에서 - 제거
+        String q = query.toLowerCase().replaceAll("-", "");
 
-        return addressBook.stream()
+        return repository.findAll().stream()
                 .filter(entry
                         -> (entry.getName() != null && entry.getName().toLowerCase().contains(q))
                 || (entry.getEmail() != null && entry.getEmail().toLowerCase().contains(q))
-                || (entry.getGroup() != null && entry.getGroup().replaceAll("-", "").contains(q))
-                )
-                .collect(Collectors.toList());
+                || (entry.getPhone() != null && entry.getPhone().replaceAll("-", "").contains(q))
+                || (entry.getCategory() != null && entry.getCategory().toLowerCase().contains(q)))
+                .toList();
     }
 
-    public void update(AddressEntry updatedEntry) {
-        for (int i = 0; i < addressBook.size(); i++) {
-            if (addressBook.get(i).getId() == updatedEntry.getId()) {
-                addressBook.set(i, updatedEntry);
-                return;
-            }
-        }
+    public void update(AddressEntry entry) {
+        repository.save(entry);
     }
 
-    public AddressEntry getById(int id) {
-        return addressBook.stream()
-                .filter(entry -> entry.getId() == id)
-                .findFirst()
-                .orElse(null);
+    public AddressEntry getByEmail(String email) {
+        return repository.findById(email).orElse(null);
     }
 
     public boolean existsByEmail(String email) {
-        return addressBook.stream()
-                .anyMatch(entry -> email != null && email.equalsIgnoreCase(entry.getEmail()));
+        return repository.existsByEmail(email);
     }
-    
-    public boolean existsByEmailExcludingId(String email, int id) {
-        return addressBook.stream()
-                .anyMatch(entry
-                        -> entry.getEmail() != null
-                && entry.getEmail().equalsIgnoreCase(email)
-                && entry.getId() != id
-                );
+
+    public List<AddressEntry> getAllSorted(String sortBy, String order) {
+        Comparator<AddressEntry> comparator;
+
+        switch (sortBy) {
+            case "email" ->
+                comparator = Comparator.comparing(AddressEntry::getEmail, String.CASE_INSENSITIVE_ORDER);
+            case "category" ->
+                comparator = Comparator.comparing(AddressEntry::getCategory, String.CASE_INSENSITIVE_ORDER);
+            case "createdAt" ->
+                comparator = Comparator.comparing(AddressEntry::getCreatedAt, Comparator.nullsLast(Comparator.naturalOrder()));
+            default ->
+                comparator = Comparator.comparing(AddressEntry::getName, String.CASE_INSENSITIVE_ORDER);
+        }
+
+        if ("desc".equalsIgnoreCase(order)) {
+            comparator = comparator.reversed();
+        }
+
+        return repository.findAll().stream()
+                .sorted(comparator)
+                .toList();
     }
 }
